--- a/app/src/main/res/layout/fragment_note_image.xml
+++ b/app/src/main/res/layout/fragment_note_image.xml
@@ -9,74 +9,87 @@
         android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
         android:background="@android:color/white">
 
-        <LinearLayout
-            android:id="@+id/flexible_space_main"
+
+        <ScrollView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?colorPrimary"
-            android:orientation="vertical"
-            android:paddingBottom="16dp"
-            android:paddingLeft="72dp"
-            android:paddingRight="16dp"
-            android:elevation="5dp"
-            android:paddingTop="16dp">
+            android:layout_height="match_parent"
+            android:scrollbarStyle="outsideInset">
 
-            <TextView
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="34sp"
-                android:id="@+id/textView"
-                android:hint="Take Picture"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                >
 
-
-
-        </LinearLayout>
         <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
 
 
 
 
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
 
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
-
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignRight="@+id/imageView1"
-                    android:text="Tap the image to open the camera!!"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <ImageView
-                    android:id="@+id/imageView1"
+                    android:id="@+id/txtNoteImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_launcher" />
-
-
-
-
-
-
+                    android:src="@drawable/ic_launcher"
+                    />
 
             </LinearLayout>
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:textSize="20sp"
+                    android:layout_gravity="bottom"
+                    android:id="@+id/txtNoteDetail"
+
+                    />
+            </LinearLayout>
+
+        </ScrollView>
 
 
     </LinearLayout>
 
 
-
-
 </RelativeLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
