--- a/app/src/main/res/layout/fragment_note_video.xml
+++ b/app/src/main/res/layout/fragment_note_video.xml
@@ -1,16 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-    <Button
-        android:id="@+id/startRecording"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:onClick="startRecording"
-        android:text="Start Recording" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/flexible_space_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?colorPrimary"
+        android:orientation="horizontal"
+        android:paddingBottom="16dp"
+        android:paddingLeft="45dp"
+        android:paddingRight="16dp"
+        android:elevation="5dp"
+        android:paddingTop="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="Subject"
+            android:paddingRight="35dp"
+            android:layout_gravity="bottom|left"
+            android:id="@+id/txtNoteSubject" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="Date"
+            android:layout_gravity="bottom"
+            android:id="@+id/txtNoteAddDate" />
+
+
+
+    </LinearLayout>
+
+    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+
+    <FrameLayout
+    	   android:layout_width="fill_parent"
+    	   android:layout_height="match_parent"
+    	   android:layout_gravity="center"
+        android:layout_weight="0.3">
+
+    	     <VideoView
+    	        android:id="@+id/video_view"
+    	        android:layout_width="match_parent"
+    	        android:layout_height="wrap_content"
+    	        android:layout_gravity="center"/>
+    </FrameLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView2"
+            android:layout_gravity="bottom"
+            android:layout_weight="0.7"
+            android:padding="5dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="New Text"
+                android:textSize="25sp"
+                android:id="@+id/txtNoteDetail"
+                android:layout_gravity="center_horizontal" />
+        </ScrollView>
+
+
+
+    </LinearLayout>
