--- a/app/src/main/res/layout/fragment_note_voice.xml
+++ b/app/src/main/res/layout/fragment_note_voice.xml
@@ -36,21 +36,17 @@
 
 
 
-        <ScrollView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbarStyle="outsideInset"
-            >
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
 
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin">
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:gravity="center">
 
 
 
@@ -58,36 +54,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Start Record"
-                    android:id="@+id/startRecord"
-                    android:layout_gravity="center_horizontal" />
+                    android:id="@+id/startRecord" />
 
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Stop Record"
-                    android:id="@+id/stopRecord"
-                    android:layout_gravity="center_horizontal" />
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Play Record"
-                    android:id="@+id/playRecord"
-                    android:layout_gravity="center_horizontal" />
-
-
-                <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/txtNoteDetail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/task_detail_hint"
-                    app:iconLeft="@drawable/ic_today_white"
-                    app:floatingLabel="highlight"
-                    app:iconPadding="10dp" />
+                    android:id="@+id/stopRecord" />
 
 
             </LinearLayout>
-        </ScrollView>
+
 
 
 
