--- a/app/src/main/res/layout/tab_indicator.xml
+++ b/app/src/main/res/layout/tab_indicator.xml
@@ -3,9 +3,8 @@
     android:id="@android:id/text1"
     android:background="?android:selectableItemBackground"
     android:layout_width="wrap_content"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:layout_height="48dp"
+    android:padding="8dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:textColor="@color/tab_text_color"
     android:textSize="@dimen/text_size_small"
