--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,15 +1,37 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" >
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.disegnator.robotocalendar.RobotoCalendarView
+        android:id="@+id/robotoCalendarPicker"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
-</RelativeLayout>
+    </com.disegnator.robotocalendar.RobotoCalendarView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:elevation="5dp"
+        android:background="@color/colorPrimary">
+
+
+
+        <ae.ac.adec.coursefollowup.Lib.SlidingTabs.SlidingTabLayout
+            android:background="@color/colorPrimary"
+            android:id="@+id/sliding_tabs_calender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/view_pager_calender"
+        android:layout_gravity="center"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
+</LinearLayout>
