--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -4,13 +4,78 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.disegnator.robotocalendar.RobotoCalendarView
-        android:id="@+id/robotoCalendarPicker"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        >
+        android:orientation="vertical">
 
-    </com.disegnator.robotocalendar.RobotoCalendarView>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp">
+            <TextView
+                android:id="@+id/tv_task_title"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.7"
+                android:gravity="center"
+                android:textSize="22dp"
+                android:text="ddd" />
+
+            <ImageView
+                android:id="@+id/img_task"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.3"
+                android:background="@drawable/notes_card" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp">
+            <TextView
+                android:id="@+id/tv_class_title"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:gravity="center"
+                android:layout_weight="0.7"
+                android:textSize="22dp"
+                android:text="ddd" />
+
+            <ImageView
+                android:id="@+id/img_class"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.3"
+                android:background="@drawable/notes_card" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="8dp">
+            <TextView
+                android:id="@+id/tv_exam_title"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.7"
+                android:gravity="center"
+                android:textSize="22dp"
+                android:text="ddd" />
+
+            <ImageView
+                android:id="@+id/img_exam"
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0.3"
+                android:background="@drawable/notes_card" />
+        </LinearLayout>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,17 +85,20 @@
         android:background="@color/colorPrimary">
 
 
-
         <ae.ac.adec.coursefollowup.Lib.SlidingTabs.SlidingTabLayout
             android:background="@color/colorPrimary"
-            android:id="@+id/sliding_tabs_calender"
+            android:id="@+id/sliding_tabs_dashboard"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+
+    <include
+        android:id="@+id/shadow_main_activity"
+        layout="@layout/toolbar_shadow" />
+
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager_calender"
+        android:id="@+id/view_pager_dashboard"
         android:layout_gravity="center"
         android:layout_height="match_parent"
         android:layout_width="match_parent" />
