--- a/app/src/main/res/layout/fragment_note_voice_view.xml
+++ b/app/src/main/res/layout/fragment_note_voice_view.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="Subject"
+            android:textColor="@android:color/white"
             android:paddingRight="35dp"
             android:layout_gravity="bottom|left"
             android:id="@+id/txtNoteSubject" />
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:text="Date"
+            android:textColor="@android:color/white"
             android:layout_gravity="bottom"
             android:id="@+id/txtNoteAddDate" />
 
@@ -43,43 +45,108 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_weight="0.3"
-    android:orientation="horizontal"
-    android:layout_gravity="center">
+    android:orientation="horizontal">
 
 
-    <Button
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Play"
-        android:id="@+id/playPauseVoiceBtn"
-        android:padding="20dp"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="0.5"/>
+        android:layout_height="match_parent"
+        android:layout_weight="0.40"></LinearLayout>
 
-    <Button
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Stop"
-        android:id="@+id/stopVoiceBtn"
-        android:padding="20dp"
-        android:layout_weight="0.5"
-        android:layout_gravity="center_vertical" />
+        android:layout_height="match_parent"
+        android:layout_weight="0.15"
+        android:gravity="center">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.44"></LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.50">
+
+
+        <ToggleButton
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+            android:textOff=" "
+            android:textOn=" "
+                android:id="@+id/playPauseVoiceBtn"
+            android:background="@drawable/play_pause_button_style"
+                android:layout_weight="0.20"
+            android:checked="false"
+            android:elevation="10dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.25"></LinearLayout>
+
+            <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Stop"
+            android:id="@+id/stopVoiceBtn"
+            android:layout_weight="0.20"
+                android:background="@drawable/stop" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.44"></LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="0.40"></LinearLayout>
+
+
+
+
+
+
+
+
 </LinearLayout>
 
 
+
+    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView2"
-        android:layout_weight="0.2">
+        android:layout_gravity="bottom"
+        android:layout_weight="0.7"
+        android:padding="5dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="New Text"
             android:textSize="25sp"
             android:id="@+id/txtNoteDetail"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp" />
     </ScrollView>
-
 </LinearLayout>
