--- a/app/src/main/res/layout/fragment_coursetime_add_edit.xml
+++ b/app/src/main/res/layout/fragment_coursetime_add_edit.xml
@@ -70,13 +70,7 @@
                         app:floatingLabel="highlight"
                         app:iconPadding="10dp" />
 
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/cb_dt_isRepeat"
-                        android:text="@string/dt_isRepeat"
-                        android:focusable="true"
-                        />
+
                     <com.rengwuxian.materialedittext.MaterialEditText
                         android:id="@+id/tv_dt_onceDate"
                         android:layout_width="match_parent"
@@ -85,6 +79,14 @@
                         app:iconLeft="@drawable/ic_today_white"
                         app:floatingLabel="highlight"
                         app:iconPadding="10dp" />
+                    <CheckBox
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/cb_dt_isRepeat"
+                        android:text="@string/dt_isRepeat"
+                        android:focusable="true"
+                        android:layout_marginLeft="8dp"
+                        />
 
                 </LinearLayout>
              </ScrollView>
