--- a/app/src/main/res/layout/fragment_task_add_edit.xml
+++ b/app/src/main/res/layout/fragment_task_add_edit.xml
@@ -32,11 +32,13 @@
                 app:baseColor="@android:color/white"
                 app:floatingLabel="highlight"
                 app:maxCharacters="20"
-                app:primaryColor="@color/colorAccent"
+                app:primaryColor="@color/white"
                 app:singleLineEllipsis="true" />
 
         </LinearLayout>
+        <!--
         <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+        -->
         <ScrollView
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
