--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -2,11 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <LinearLayout
 
-        android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="@android:color/white">
 
         <LinearLayout
@@ -20,41 +22,29 @@
             android:paddingRight="16dp"
             android:elevation="5dp"
             android:paddingTop="16dp">
-
             <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/txtTaskSubject"
-                android:layout_width="wrap_content"
+                android:id="@+id/txtTaskName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/task_subject_hint"
+                android:hint="@string/task_name"
+
                 android:textCursorDrawable="@drawable/text_cursor"
-                android:textSize="32sp"
+                android:textSize="34sp"
                 app:baseColor="@android:color/white"
                 app:floatingLabel="highlight"
                 app:maxCharacters="20"
-                app:primaryColor="@color/colorAccent"
+                app:primaryColor="@color/white"
                 app:singleLineEllipsis="true" />
 
-            <com.rengwuxian.materialedittext.MaterialEditText
-                android:id="@+id/txtTaskType"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/task_type_hint"
-                android:textCursorDrawable="@drawable/text_cursor"
-                android:textSize="30sp"
-                app:baseColor="@android:color/white"
-                app:floatingLabel="highlight"
-                app:maxCharacters="20"
-                app:primaryColor="@color/colorAccent"
-                app:singleLineEllipsis="true" />
 
         </LinearLayout>
-        <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+
+        <include
+            android:id="@+id/shadow_main_activity"
+            layout="@layout/toolbar_shadow" />
 
 
-
-
-        <ScrollView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scrollbarStyle="outsideInset">
@@ -70,14 +60,23 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
-
-
                 <com.rengwuxian.materialedittext.MaterialEditText
-                    android:id="@+id/txtTaskName"
+                    android:id="@+id/txtTaskSubject"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/task_name"
-                    app:floatingLabel="highlight"/>
+                    android:hint="@string/task_subject_hint"
+                    app:iconLeft="@drawable/ic_today_white"
+                    app:floatingLabel="highlight"
+                    app:iconPadding="10dp" />
+
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/txtTaskType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/task_type_hint"
+                    app:iconLeft="@drawable/ic_today_white"
+                    app:floatingLabel="highlight"
+                    app:iconPadding="10dp" />
 
                 <View
                     android:id="@+id/viewDivider1"
@@ -86,8 +85,8 @@
                     android:background="#878787"
                     android:layout_below="@+id/txtTaskName"
                     android:layout_alignLeft="@+id/titleTextView"
-                    android:layout_alignStart="@+id/titleTextView"
-                    />
+                    android:layout_alignStart="@+id/titleTextView" />
+
                 <com.rengwuxian.materialedittext.MaterialEditText
                     android:id="@+id/txtTaskDueDate"
                     android:layout_width="match_parent"
@@ -105,6 +104,7 @@
                     android:layout_below="@+id/txtTaskDueDate"
                     android:layout_alignLeft="@+id/titleTextView"
                     android:layout_alignStart="@+id/titleTextView" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -114,12 +114,12 @@
                     android:paddingTop="10dp"
                     android:paddingLeft="25dp"
                     android:gravity="left" />
+
                 <SeekBar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/seekBar"
-                    android:max="100"
-                    />
+                    android:max="100" />
 
                 <View
                     android:id="@+id/viewDivider3"
@@ -128,8 +128,8 @@
                     android:background="#878787"
                     android:layout_below="@+id/txtTaskName"
                     android:layout_alignLeft="@+id/titleTextView"
-                    android:layout_alignStart="@+id/titleTextView"
-                    />
+                    android:layout_alignStart="@+id/titleTextView" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -145,8 +145,6 @@
         </ScrollView>
 
     </LinearLayout>
-
-
 
 
 </RelativeLayout>
