--- a/app/src/main/res/layout/row_cardview_exam.xml
+++ b/app/src/main/res/layout/row_cardview_exam.xml
@@ -2,73 +2,82 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="25dp"
     android:orientation="horizontal"
     card_view:cardElevation="2sp"
     card_view:cardUseCompatPadding="true"
-
-    card_view:cardCornerRadius="4dp"
+    card_view:cardCornerRadius="0dp"
     android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    >
+    android:foreground="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-<LinearLayout
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/ll_tv"
-    android:orientation="horizontal">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            android:layout_height="fill_parent"
-            android:id="@+id/tv_exam_card_courseName"
-            android:padding="16dp"
-            android:textColor="#3C3C3C"
-            android:textSize="22sp"
-            tools:text="This is the title"/>
 
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="fill_parent"
-        android:text="10 min"
-        android:padding="16dp"
-        android:textSize="18sp"
-        android:layout_gravity="right"
-        android:id="@+id/tv_exam_card_duration"
-        android:layout_weight="0.4" />
-</LinearLayout>
-
-        <View
-            android:id="@+id/cardDivider"
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:background="#D4D4D4"
-            android:layout_below="@+id/ll_tv"
-            android:layout_alignLeft="@+id/ll_tv"
-            android:layout_alignStart="@+id/ll_tv"
-            />
-
-
-        <TextView
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_exam_card_startTime"
-            android:layout_below="@+id/cardDivider"
-            android:textColor="#878787"
-            android:padding="16dp"
-            android:textSize="16sp"
-            tools:text="And this is the description"/>
+            android:orientation="horizontal">
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.025"
+            android:id="@+id/img_exam_color"
+            android:background="@color/colorAccent"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_weight="0.975"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ll_tv"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="0.7"
+                    android:layout_height="fill_parent"
+                    android:id="@+id/tv_exam_card_courseName"
+                    android:padding="12dp"
+                    android:textColor="#3C3C3C"
+                    android:textSize="20sp"
+                    tools:text="This is the title" />
 
-
-
-
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:text="10 min"
+                    android:padding="12dp"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:id="@+id/tv_exam_card_duration"
+                    android:layout_weight="0.3"
+                    android:textColor="@color/white"
+                    android:background="@color/colorPrimary"/>
+            </LinearLayout>
+            <View
+                android:id="@+id/cardDivider"
+                android:layout_width="fill_parent"
+                android:layout_height="1px"
+                android:background="#D4D4D4"
+                android:layout_below="@+id/ll_tv"
+                android:layout_alignLeft="@+id/ll_tv"
+                android:layout_alignStart="@+id/ll_tv" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_exam_card_startTime"
+                android:layout_below="@+id/cardDivider"
+                android:textColor="#878787"
+                android:padding="12dp"
+                android:textSize="16sp"
+                tools:text="And this is the description" />
+            </LinearLayout>
+        </LinearLayout>
 
 
     </RelativeLayout>
