--- a/app/src/main/res/layout/row_cardview_task.xml
+++ b/app/src/main/res/layout/row_cardview_task.xml
@@ -49,15 +49,16 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:id="@+id/txtTaskDueDate"
                 android:layout_weight="0.35"
-                android:textColor="@color/white"
+                android:textColor="@color/colorInnerBlockText"
                 android:padding="10dp"
-                android:textSize="12sp"
+                android:textSize="13sp"
                 tools:text="Mar 23 15"
-                android:gravity="right"
-                android:background="@color/colorPrimary"
+                android:layout_margin="4dp"
+                android:gravity="center"
+                android:background="@color/colorInnerBlockBG"
                 android:layout_gravity="center_vertical" />
 
         </LinearLayout>
