--- a/app/src/main/res/layout/toolbar_shadow.xml
+++ b/app/src/main/res/layout/toolbar_shadow.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_alignParentTop="true"
     android:layout_marginTop="0dp"
-    android:layout_height="6dp"
-    android:background="@drawable/toolbar_dropshadow" />
+    android:layout_height="6dp"></View>
+    <!--android:background="@drawable/toolbar_dropshadow" />-->
